Flatten classes.