@@ -8,8 +8,13 @@ import static dev.langchain4j.internal.Utils.readBytes;
 import static dev.langchain4j.model.googleai.FunctionMapper.toToolExecutionRequests;
 import static dev.langchain4j.model.googleai.Json.fromJson;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 
+import java.net.URI;
+import java.util.ArrayList;
+import java.util.Base64;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import dev.langchain4j.agent.tool.ToolExecutionRequest;
 import dev.langchain4j.data.image.Image;
 import dev.langchain4j.data.message.AiMessage;
@@ -26,14 +31,10 @@ import dev.langchain4j.data.message.VideoContent;
 import dev.langchain4j.data.pdf.PdfFile;
 import dev.langchain4j.exception.UnsupportedFeatureException;
 import dev.langchain4j.internal.CustomMimeTypesFileTypeDetector;
-import java.net.URI;
-import java.util.ArrayList;
-import java.util.Base64;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 
-class PartsAndContentsMapper {
+final class PartsAndContentsMapper {
+    private PartsAndContentsMapper() {
+    }
 
     static final String THINKING_SIGNATURE_KEY =
             "thinking_signature"; // do not change, will break backward compatibility!
@@ -42,14 +43,14 @@ class PartsAndContentsMapper {
 
     private static final CustomMimeTypesFileTypeDetector mimeTypeDetector = new CustomMimeTypesFileTypeDetector();
 
-    static GeminiPart fromContentToGPart(Content content) {
+    static GeminiContent.GeminiPart fromContentToGPart(Content content) {
         if (content instanceof TextContent textContent) {
-            return GeminiPart.builder().text(textContent.text()).build();
+            return GeminiContent.GeminiPart.builder().text(textContent.text()).build();
         } else if (content instanceof ImageContent imageContent) {
             Image image = imageContent.image();
 
             if (!isNullOrBlank(image.base64Data())) {
-                return GeminiPart.builder()
+                return GeminiContent.GeminiPart.builder()
                         .inlineData(GeminiBlob.builder()
                                 .mimeType(image.mimeType())
                                 .data(image.base64Data())
@@ -60,14 +61,14 @@ class PartsAndContentsMapper {
                 if (url.getScheme() != null && url.getScheme().startsWith("http")) {
                     byte[] imageBytes = readBytes(url.toString());
                     String base64Data = Base64.getEncoder().encodeToString(imageBytes);
-                    return GeminiPart.builder()
+                    return GeminiContent.GeminiPart.builder()
                             .inlineData(GeminiBlob.builder()
                                     .mimeType(getOrDefault(image.mimeType(), mimeTypeDetector.probeContentType(url)))
                                     .data(base64Data)
                                     .build())
                             .build();
                 } else {
-                    return GeminiPart.builder()
+                    return GeminiContent.GeminiPart.builder()
                             .fileData(GeminiFileData.builder()
                                     .fileUri(url.toString())
                                     .mimeType(getOrDefault(image.mimeType(), mimeTypeDetector.probeContentType(url)))
@@ -80,14 +81,14 @@ class PartsAndContentsMapper {
         } else if (content instanceof AudioContent audioContent) {
             URI uri = audioContent.audio().url();
             if (uri != null) {
-                return GeminiPart.builder()
+                return GeminiContent.GeminiPart.builder()
                         .fileData(GeminiFileData.builder()
                                 .fileUri(uri.toString())
                                 .mimeType(mimeTypeDetector.probeContentType(uri))
                                 .build())
                         .build();
             } else {
-                return GeminiPart.builder()
+                return GeminiContent.GeminiPart.builder()
                         .inlineData(GeminiBlob.builder()
                                 .mimeType(audioContent.audio().mimeType())
                                 .data(audioContent.audio().base64Data())
@@ -97,14 +98,14 @@ class PartsAndContentsMapper {
         } else if (content instanceof VideoContent videoContent) {
             URI uri = videoContent.video().url();
             if (uri != null) {
-                return GeminiPart.builder()
+                return GeminiContent.GeminiPart.builder()
                         .fileData(GeminiFileData.builder()
                                 .fileUri(uri.toString())
                                 .mimeType(mimeTypeDetector.probeContentType(uri))
                                 .build())
                         .build();
             } else {
-                return GeminiPart.builder()
+                return GeminiContent.GeminiPart.builder()
                         .inlineData(GeminiBlob.builder()
                                 .mimeType(videoContent.video().mimeType())
                                 .data(videoContent.video().base64Data())
@@ -116,14 +117,14 @@ class PartsAndContentsMapper {
 
             URI uri = pdfFile.url();
             if (uri != null) {
-                return GeminiPart.builder()
+                return GeminiContent.GeminiPart.builder()
                         .fileData(GeminiFileData.builder()
                                 .fileUri(uri.toString())
                                 .mimeType(mimeTypeDetector.probeContentType(uri))
                                 .build())
                         .build();
             } else {
-                return GeminiPart.builder()
+                return GeminiContent.GeminiPart.builder()
                         .inlineData(GeminiBlob.builder()
                                 .mimeType(pdfFile.mimeType())
                                 .data(pdfFile.base64Data())
@@ -136,17 +137,17 @@ class PartsAndContentsMapper {
     }
 
     static AiMessage fromGPartsToAiMessage(
-            List<GeminiPart> parts, boolean includeCodeExecutionOutput, Boolean returnThinking) {
+            List<GeminiContent.GeminiPart> parts, boolean includeCodeExecutionOutput, Boolean returnThinking) {
 
-        List<GeminiPart> safeParts = Objects.requireNonNullElse(parts, List.of());
+        List<GeminiContent.GeminiPart> safeParts = Objects.requireNonNullElse(parts, List.of());
         StringBuilder fullText = new StringBuilder();
         List<String> thoughts = new ArrayList<>();
         List<String> thoughtSignatures = new ArrayList<>();
         List<GeminiFunctionCall> functionCalls = new ArrayList<>();
         List<Image> generatedImages = new ArrayList<>();
 
-        for (GeminiPart part : safeParts) {
-            GeminiExecutableCode executableCode = part.getExecutableCode();
+        for (GeminiContent.GeminiPart part : safeParts) {
+            GeminiExecutableCode executableCode = part.executableCode();
             if (executableCode != null && includeCodeExecutionOutput) {
                 fullText.append("Code executed:\n")
                         .append("```python")
@@ -159,7 +160,7 @@ class PartsAndContentsMapper {
                         .append("```\n");
             }
 
-            GeminiCodeExecutionResult codeExecutionResult = part.getCodeExecutionResult();
+            GeminiCodeExecutionResult codeExecutionResult = part.codeExecutionResult();
             if (codeExecutionResult != null && includeCodeExecutionOutput) {
                 GeminiOutcome outcome = codeExecutionResult.getOutcome();
 
@@ -167,7 +168,7 @@ class PartsAndContentsMapper {
                     fullText.append("Code execution failed: **")
                             .append(outcome.name())
                             .append("**\n")
-                            .append(part.getText() != null ? part.getText() : "");
+                            .append(part.text() != null ? part.text() : "");
                 } else {
                     fullText.append("Output:\n")
                             .append("```\n")
@@ -176,7 +177,7 @@ class PartsAndContentsMapper {
                 }
             }
 
-            String text = part.getText();
+            String text = part.text();
             if (isNotNullOrEmpty(text)) {
                 if (Boolean.TRUE.equals(part.isThought())) {
                     if (Boolean.TRUE.equals(returnThinking)) {
@@ -195,16 +196,16 @@ class PartsAndContentsMapper {
                 }
             }
 
-            String thoughtSignature = part.getThoughtSignature();
+            String thoughtSignature = part.thoughtSignature();
             if (Boolean.TRUE.equals(returnThinking) && isNotNullOrEmpty(thoughtSignature)) {
                 thoughtSignatures.add(thoughtSignature);
             }
 
-            if (part.getFunctionCall() != null) {
-                functionCalls.add(part.getFunctionCall());
+            if (part.functionCall() != null) {
+                functionCalls.add(part.functionCall());
             }
 
-            GeminiBlob inlineData = part.getInlineData();
+            GeminiBlob inlineData = part.inlineData();
             if (inlineData != null
                     && inlineData.getMimeType() != null
                     && inlineData.getMimeType().startsWith("image/")
@@ -246,36 +247,33 @@ class PartsAndContentsMapper {
                             SystemMessage systemMessage = (SystemMessage) msg;
 
                             if (systemInstruction != null) {
-                                systemInstruction.addPart(GeminiPart.builder()
+                                systemInstruction.addPart(GeminiContent.GeminiPart.builder()
                                         .text(systemMessage.text())
                                         .build());
                                 return null;
                             }
 
                             if (isNotNullOrEmpty(systemMessage.text())) {
-                                return GeminiContent.builder()
-                                        .role(GeminiRole.MODEL.toString())
-                                        .parts(List.of(GeminiPart.builder()
-                                                .text(systemMessage.text())
-                                                .build()))
-                                        .build();
+                                return new GeminiContent(List.of(GeminiContent.GeminiPart.builder()
+                                        .text(systemMessage.text())
+                                        .build()), GeminiRole.MODEL.toString());
                             }
 
                             return null;
                         case AI:
                             AiMessage aiMessage = (AiMessage) msg;
 
-                            List<GeminiPart> parts = new ArrayList<>();
+                            List<GeminiContent.GeminiPart> parts = new ArrayList<>();
 
                             if (sendThinking && isNotNullOrEmpty(aiMessage.thinking())) {
-                                parts.add(GeminiPart.builder()
+                                parts.add(GeminiContent.GeminiPart.builder()
                                         .text(aiMessage.thinking())
                                         .thought(true)
                                         .build());
                             }
 
                             if (isNotNullOrEmpty(aiMessage.text())) {
-                                parts.add(GeminiPart.builder()
+                                parts.add(GeminiContent.GeminiPart.builder()
                                         .text(aiMessage.text())
                                         .build());
                             }
@@ -288,47 +286,42 @@ class PartsAndContentsMapper {
                                 parts.addAll(toGeminiParts(aiMessage.toolExecutionRequests(), thoughtSignature));
                             }
 
-                            return GeminiContent.builder()
-                                    .role(GeminiRole.MODEL.toString())
-                                    .parts(parts)
-                                    .build();
+                            return new GeminiContent(parts, GeminiRole.MODEL.toString());
 
                         case USER:
                             UserMessage userMessage = (UserMessage) msg;
 
-                            return GeminiContent.builder()
-                                    .role(GeminiRole.USER.toString())
-                                    .parts(userMessage.contents().stream()
+                            return new GeminiContent(
+                                    userMessage.contents().stream()
                                             .map(PartsAndContentsMapper::fromContentToGPart)
-                                            .collect(toList()))
-                                    .build();
+                                            .toList(),
+                                    GeminiRole.USER.toString());
                         case TOOL_EXECUTION_RESULT:
                             ToolExecutionResultMessage toolResultMessage = (ToolExecutionResultMessage) msg;
 
-                            return GeminiContent.builder()
-                                    .role(GeminiRole.USER.toString())
-                                    .parts(List.of(GeminiPart.builder()
+                            return new GeminiContent(
+                                    List.of(GeminiContent.GeminiPart.builder()
                                             .functionResponse(GeminiFunctionResponse.builder()
                                                     .name(toolResultMessage.toolName())
                                                     .response(Map.of("response", toolResultMessage.text()))
                                                     .build())
-                                            .build()))
-                                    .build();
+                                            .build()),
+                                    GeminiRole.USER.toString());
                         default:
                             return null;
                     }
                 })
                 .filter(Objects::nonNull)
-                .collect(toList());
+                .toList();
     }
 
-    private static List<GeminiPart> toGeminiParts(
+    private static List<GeminiContent.GeminiPart> toGeminiParts(
             List<ToolExecutionRequest> toolExecutionRequests, String thoughtSignature) {
-        List<GeminiPart> geminiParts = new ArrayList<>();
+        List<GeminiContent.GeminiPart> geminiParts = new ArrayList<>();
         for (int i = 0; i < toolExecutionRequests.size(); i++) {
             ToolExecutionRequest toolExecutionRequest = toolExecutionRequests.get(i);
             boolean shouldAddThoughtSignature = i == 0 && isNotNullOrEmpty(thoughtSignature);
-            GeminiPart geminiPart = GeminiPart.builder()
+            GeminiContent.GeminiPart geminiPart = GeminiContent.GeminiPart.builder()
                     .functionCall(GeminiFunctionCall.builder()
                             .name(toolExecutionRequest.name())
                             .args(fromJson(toolExecutionRequest.arguments(), Map.class))
